--- a/my-project-client/public/index.html
+++ b/my-project-client/public/index.html
@@ -14,6 +14,26 @@
       href="https://fonts.googleapis.com/css?family=Barlow+Condensed|Cinzel|Cormorant+Garamond|Fira+Sans+Extra+Condensed|Russo+One&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css?family=Alfa+Slab+One|Gloria+Hallelujah|IBM+Plex+Sans|Nanum+Myeongjo|Permanent+Marker&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Aclonica|El+Messiri|Marcellus+SC|Rock+Salt|Unna&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Junge|New+Rocker|Nosifer&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Carrois+Gothic+SC|Exo|Old+Standard+TT|Rubik+Mono+One&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Audiowide|Cousine|Enriqueta|Sigmar+One|Unna&display=swap"
+      rel="stylesheet"
+    />
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
