thurs afternoon save

--- a/my-project-client/public/index.html
+++ b/my-project-client/public/index.html
@@ -34,6 +34,10 @@
       href="https://fonts.googleapis.com/css?family=Audiowide|Cousine|Enriqueta|Sigmar+One|Unna&display=swap"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css?family=Aclonica|Cinzel+Decorative|Cormorant+Unicase|Shojumaru&display=swap"
+      rel="stylesheet"
+    />
 
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
